@@ -67,19 +67,19 @@ static const char CSS_ALL[]
 "    color: rgb(192,128,0);\n"
 "}\n"
 ".diag-stereo::before {\n"
-"    content:\"\\0000ab\";\n"
+"    content:\"\\0000a0 \\0000ab\";\n"
 "}\n"
 ".diag-stereo {\n"
-"    color: rgb(128,128,128);\n"
+"    color: rgb(80,80,80);\n"
 "}\n"
 ".diag-stereo::after {\n"
-"    content: \"\\0000bb \\0000a0 \";\n"
+"    content: \"\\0000bb\";\n"
 "}\n"
 ".diag-name {\n"
 "    color: rgb(128,128,128);\n"
 "}\n"
 ".diag-type::before {\n"
-"    content:\" \\0000a0 \\0000a0 {type=\";\n"
+"    content:\"\\0000a0 \\0000a0 {type=\";\n"
 "}\n"
 ".diag-type {\n"
 "    color: rgb(160,160,160);\n"
@@ -88,7 +88,7 @@ static const char CSS_ALL[]
 "    content: \"}\";\n"
 "}\n"
 ".diag-id::before {\n"
-"    content:\" \\0000a0 \\0000a0 {id=\";\n"
+"    content:\"\\0000a0 \\0000a0 {id=\";\n"
 "}\n"
 ".diag-id {\n"
 "    color: rgb(160,160,160);\n"
@@ -109,19 +109,19 @@ static const char CSS_ALL[]
 "    margin-top: 8px;\n"
 "}\n"
 ".clas-stereo::before {\n"
-"    content:\"\\0000ab\";\n"
+"    content:\"\\0000a0 \\0000ab\";\n"
 "}\n"
 ".clas-stereo {\n"
-"    color: rgb(128,128,128);\n"
+"    color: rgb(80,80,80);\n"
 "}\n"
 ".clas-stereo::after {\n"
-"    content: \"\\0000bb \\0000a0 \";\n"
+"    content: \"\\0000bb\";\n"
 "}\n"
 ".clas-name {\n"
-"    color: rgb(128,80,0);\n"
+"    color: rgb(192,128,0);\n"
 "}\n"
 ".clas-type::before {\n"
-"    content:\" \\0000a0 \\0000a0 {type=\";\n"
+"    content:\"\\0000a0 \\0000a0 {type=\";\n"
 "}\n"
 ".clas-type {\n"
 "    color: rgb(160,160,160);\n"
@@ -130,7 +130,7 @@ static const char CSS_ALL[]
 "    content: \"}\";\n"
 "}\n"
 ".clas-id::before {\n"
-"    content:\" \\0000a0 \\0000a0 {id=\";\n"
+"    content:\"\\0000a0 \\0000a0 {id=\";\n"
 "}\n"
 ".clas-id {\n"
 "    color: rgb(160,160,160);\n"
@@ -160,19 +160,19 @@ static const char CSS_ALL[]
 "    border: 1px solid #F0F0F0;\n"
 "}\n"
 ".feat-stereo::before {\n"
-"    content:\"\\0000ab\";\n"
+"    content:\"\\0000a0 \\0000ab\";\n"
 "}\n"
 ".feat-stereo {\n"
-"    color: rgb(128,128,128);\n"
-"}\n"
-".feat-stereo::after {\n"
-"    content: \"\\0000bb \\0000a0 \";\n"
-"}\n"
-".feat-name {\n"
 "    color: rgb(80,80,80);\n"
 "}\n"
+".feat-stereo::after {\n"
+"    content: \"\\0000bb\";\n"
+"}\n"
+/* ".feat-name {\n" */
+/* "    color: rgb(0,0,0);\n" */
+/* "}\n" */
 ".feat-type::before {\n"
-"    content:\" \\0000a0 \\0000a0 {type=\";\n"
+"    content:\"\\0000a0 \\0000a0 {type=\";\n"
 "}\n"
 ".feat-type {\n"
 "    color: rgb(160,160,160);\n"
@@ -181,7 +181,7 @@ static const char CSS_ALL[]
 "    content: \"}\";\n"
 "}\n"
 ".feat-id::before {\n"
-"    content: \" \\0000a0 \\0000a0 {id=\";\n"
+"    content: \"\\0000a0 \\0000a0 {id=\";\n"
 "}\n"
 ".feat-id {\n"
 "    color: rgb(160,160,160);\n"
@@ -202,19 +202,22 @@ static const char CSS_ALL[]
 "    margin-right: 32px;\n"
 "}\n"
 ".rel-stereo::before {\n"
-"    content:\"\\0000ab\";\n"
+"    content:\"\\0000a0 \\0000ab\";\n"
 "}\n"
 ".rel-stereo {\n"
-"    color: rgb(128,128,128);\n"
-"}\n"
-".rel-stereo::after {\n"
-"    content: \"\\0000bb \\0000a0 \";\n"
-"}\n"
-".rel-name {\n"
 "    color: rgb(80,80,80);\n"
 "}\n"
+".rel-stereo::after {\n"
+"    content: \"\\0000bb\";\n"
+"}\n"
+/* ".rel-name {\n" */
+/* "    color: rgb(0,0,0);\n" */
+/* "}\n" */
+/* ".rel-dest {\n" */
+/* "    color: rgb(0,0,0);\n" */
+/* "}\n" */
 ".rel-type::before {\n"
-"    content:\" \\0000a0 \\0000a0 {type=\";\n"
+"    content:\"\\0000a0 \\0000a0 {type=\";\n"
 "}\n"
 ".rel-type {\n"
 "    color: rgb(160,160,160);\n"
@@ -223,7 +226,7 @@ static const char CSS_ALL[]
 "    content: \"}\";\n"
 "}\n"
 ".rel-id::before {\n"
-"    content: \" \\0000a0 \\0000a0 {id=\";\n"
+"    content: \"\\0000a0 \\0000a0 {id=\";\n"
 "}\n"
 ".rel-id {\n"
 "    color: rgb(160,160,160);\n"
